<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AlbumDetails">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/albumPhoto"
        android:src="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gradient_bg" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:id="@+id/recyclerView"
        android:layout_below="@id/albumPhoto" />


</RelativeLayout>