<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corner"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_top"
        android:gravity="center"
        android:padding="16dp"
        android:text="Choose album to add"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/cardview_background">

        <Spinner
            android:id="@+id/albumSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/heyya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:background="@drawable/mybutton"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:background="@drawable/mybutton"/>
    </LinearLayout>
</LinearLayout>
